2008-09-08 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSSavePanel.m (-browser:createRowsForColumn:inMatrix:):
	Use flushWindow instead of [GSCurrentContext() flushGraphics].
	Should fix #24200.

2008-09-08 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSCell.h: Move _sizeForBorderType to GSTheme.h
	* Headers/Additions/GNUstepGUI/GSTheme.h (-sizeForBorderType:,
	-drawBorderType:frame:view:, -sizeForImageFrameStyle:,
	-drawBorderForImageFrameStyle:frame:view:), 
	* Source/GSTheme.m: New methods. 
	* Source/NSCell.m (-cellSize, -drawingRectForBounds:,
	-_drawBorderAndBackgroundWithFrame:inView:),
	* Source/NSImageCell.m (-cellSize, -drawingRectForBounds:,
	-_drawBorderAndBackgroundWithFrame:inView:): Use new GSTheme methods.
	* Source/NSPopUpButtonCell.m: Include GSTheme.h
	* Source/NSButtonCell.m: Moved gradient drawing method to GSTheme
	and call it from _drawBorderAndBackgroundWithFrame:inView:.
	* Source/GSTheme.m (-drawGradientBorder:inRect:withClip:): New method. 
		
2008-09-07 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSBitmapImageRep+ICNS.m: Corrected last change.

2008-09-06 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSBitmapImageRep+ICNS.m: Change the incosistently named
	constants not only in the usage but also in the definition.
	
2008-09-03 21:13-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSBitmapImageRep+ICNS.m: Correct minor issue with constant name.

2008-09-03 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSBitmapImageRep.m (+imageUnfilteredFileTypes): Always
	enable icns format.
	* Source/NSBitmapImageRep+ICNS.m: Add drop in replacement code for
	libicns and clean up loading code.

2008-08-30 13:33-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* ChangeLog
	* Images/GNUmakefile: Remove reference to Images copyright file 
	reference since they images are now under the GPL.

2008-08-30 13:32-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Images/GNUmakefile
	* Source/GSNibTemplates.m
